[gd_scene load_steps=13 format=3 uid="uid://b0qikit328i7c"]

[ext_resource type="Script" uid="uid://igg55oep1ge7" path="res://Script/monitor_ui.gd" id="1_pnies"]
[ext_resource type="Texture2D" uid="uid://diqacbgbwhjv8" path="res://Res/icon.svg" id="2_3xoc5"]
[ext_resource type="Texture2D" uid="uid://kog8aemr2n5v" path="res://Texture/UI/monitorUI_v0.4.png" id="2_318y1"]
[ext_resource type="PackedScene" uid="uid://br7k5dtujv5sq" path="res://SubScenes/CameraViews/security_cam.tscn" id="3_pnies"]
[ext_resource type="Texture2D" uid="uid://c1ntk7sha0ki4" path="res://Texture/UI/floating_ad.png" id="5_318y1"]

[sub_resource type="ViewportTexture" id="ViewportTexture_3xoc5"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_318y1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pnies"]
resource_name = "spin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rx1ev"]
_data = {
&"RESET": SubResource("Animation_318y1"),
&"spin": SubResource("Animation_pnies")
}

[sub_resource type="Animation" id="Animation_5dk0d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(857, 505)]
}

[sub_resource type="Animation" id="Animation_rx1ev"]
resource_name = "float"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(855, 503), Vector2(371, 98), Vector2(855, 503)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbo4c"]
_data = {
&"RESET": SubResource("Animation_5dk0d"),
&"float": SubResource("Animation_rx1ev")
}

[node name="MonitorUI" type="Node2D"]
script = ExtResource("1_pnies")

[node name="MonitorProgram" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(586, 329)
scale = Vector2(0.268326, 0.268326)
texture = ExtResource("2_318y1")

[node name="Cam1Btn" type="Button" parent="."]
offset_left = 43.0
offset_top = 115.0
offset_right = 222.0
offset_bottom = 156.0
text = "Cam1"
icon = ExtResource("2_3xoc5")
expand_icon = true

[node name="Cam2Btn" type="Button" parent="."]
offset_left = 43.0
offset_top = 162.0
offset_right = 222.0
offset_bottom = 203.0
text = "Cam2"
icon = ExtResource("2_3xoc5")
expand_icon = true

[node name="Cam3Btn" type="Button" parent="."]
offset_left = 43.0
offset_top = 208.0
offset_right = 222.0
offset_bottom = 249.0
text = "Cam3"
icon = ExtResource("2_3xoc5")
expand_icon = true

[node name="Cam4Btn" type="Button" parent="."]
offset_left = 43.0
offset_top = 254.0
offset_right = 222.0
offset_bottom = 295.0
text = "Cam4"
icon = ExtResource("2_3xoc5")
expand_icon = true

[node name="Cam5Btn" type="Button" parent="."]
offset_left = 43.0
offset_top = 299.0
offset_right = 222.0
offset_bottom = 340.0
text = "Cam5"
icon = ExtResource("2_3xoc5")
expand_icon = true

[node name="Cam6Btn" type="Button" parent="."]
offset_left = 43.0
offset_top = 344.0
offset_right = 222.0
offset_bottom = 385.0
text = "Cam6"
icon = ExtResource("2_3xoc5")
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 241.0
offset_top = 79.0
offset_right = 990.0
offset_bottom = 524.0
texture = SubResource("ViewportTexture_3xoc5")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(749, 445)

[node name="StageCam" parent="SubViewport" instance=ExtResource("3_pnies")]

[node name="LoadingAnim" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.235294)
z_index = 2
position = Vector2(624, 295)
texture = ExtResource("2_3xoc5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LoadingAnim"]
libraries = {
&"": SubResource("AnimationLibrary_rx1ev")
}
autoplay = "RESET"
speed_scale = 3.0

[node name="FloatingAd" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(857, 505)
scale = Vector2(0.325001, 0.325001)
texture = ExtResource("5_318y1")

[node name="AdAnimationPlayer" type="AnimationPlayer" parent="FloatingAd"]
libraries = {
&"": SubResource("AnimationLibrary_gbo4c")
}
autoplay = "float"
speed_scale = 0.2

[connection signal="button_down" from="Cam1Btn" to="." method="OnCam1BtnPressed"]
[connection signal="button_down" from="Cam3Btn" to="." method="OnCam3BtnPressed"]
[connection signal="button_down" from="Cam5Btn" to="." method="OnCam5BtnPressed"]
[connection signal="button_down" from="Cam6Btn" to="." method="OnCam6BtnPressed"]
[connection signal="animation_finished" from="LoadingAnim/AnimationPlayer" to="." method="OnLoadingAnimFin"]
